<?xml version="1.0"?>
<package format="2">
  <name>tui_ros_tool</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>GPLv3</license>
  <maintainer email="wechtc@gmail.com">wechtc@gmail.com</maintainer>
  <author email="wechtc@gmail.com">wechtc@gmail.com</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:kognitive_automobile_labor/tui_ros_tool.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>motor_interface_ros_tool</depend>
  <depend>utils_ros</depend>

  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
