<?xml version="1.0"?>
<package format="2">
  <name>util_testing_ros</name>
  <version>1.0.0</version>
  <description>Utility library for simple creation of ROS unittests</description>

  <license>GPLv3</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">git@gitlab.mrt.uni-karlsruhe.de:MRT/util_testing_ros.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>rosnode</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>

  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
